modified:   css/styles.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id="contenedor">
             <div id="header">
-                <h1>Ejemplo de Maquetación</h1>
+                <h1 class="h1">Ejemplo de Maquetación</h1>
             </div>
             <div id="nav"></div>
             <div id="contenido">
@@ -23,4 +23,4 @@
             <div id="footer"></div>
         </div>
     </body>
-</html>
+</html> 
